# share_a_secret

./: .env.sample  .gitignore  Dockerfile  README.md  create_db.sql  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
secret/: admin.py  models.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
secret/management/commands/: check_lifetime.py
secret/migrations/: 0001_initial.py
